--- a/EagleSocial/View/MessageCell/MessageCell.xib
+++ b/EagleSocial/View/MessageCell/MessageCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MessageCell" customModule="EagleSocial" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MessageCell" id="KGk-i7-Jjw" customClass="MessageCell" customModule="EagleSocial" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -66,9 +66,9 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="displayNameLabel" destination="fY9-Dx-bKq" id="CEp-7M-d0j"/>
-                <outlet property="messageBodyLabel" destination="Gvs-Xy-uNg" id="HSZ-mh-0ur"/>
-                <outlet property="profileImageview" destination="I2i-Kd-raX" id="Rlv-PU-Xg3"/>
+                <outlet property="messageBodyLabel" destination="Gvs-Xy-uNg" id="3qy-zt-kFE"/>
+                <outlet property="nameLabel" destination="fY9-Dx-bKq" id="PU9-ve-eEi"/>
+                <outlet property="profileImageView" destination="I2i-Kd-raX" id="Apj-yd-MEf"/>
             </connections>
             <point key="canvasLocation" x="25" y="51.5"/>
         </tableViewCell>
