3/27/2018 Fixed an issue with the tapGesterRecognizer so the function to dismiss the keyboard would work. Rounded the corners on the message bubbles so the message list looks more like a messaging screen. Added a generic profile image to each message retrieved at least until the profiles are built out complete with profile picture that I can pull from. Removed the separator so there will be no lines in between the messages. Migrated and refactored some of the firebase code for sending new messages away from the view controller and put it in the model. Added more comments and spacing for improved code readability.
Class Message
Made all the attributes private
Added 3 new attributes: conversationID, messageDictionary, and members
Added initializer function and overloaded initializer function.
Added sendMethod method.
Added getters for SenderId, messageBody, conversationID, messageDictionary, and members.
Added setters for SenderId, messageBody, and messageDictionary.

--- a/EagleSocial/View/MessageCell/MessageCell.xib
+++ b/EagleSocial/View/MessageCell/MessageCell.xib
@@ -52,6 +52,12 @@
                             <constraint firstItem="Gvs-Xy-uNg" firstAttribute="top" secondItem="fY9-Dx-bKq" secondAttribute="bottom" constant="10" id="yT5-BH-f6D"/>
                             <constraint firstAttribute="trailing" secondItem="fY9-Dx-bKq" secondAttribute="trailing" constant="10" id="ymG-Mb-dBT"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="20"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
                 </subviews>
                 <constraints>
